<resources>
    <string name="app_name">Цены на авторемонт</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Filter ListView Tutorial</string>
    <string name="work_price_label">"Цена : от "</string>
    <string name="work_title_label">"Работа : "</string>
    <string name="work_details_label">"Подробности : "</string>
    <string name="engine_repair">Ремонт двигателя</string>
    <string name="suspension_repair">Ремонт подвески</string>
    <string name="electrical_repair">Автоэлектрика</string>
    <string name="tire_repair">Шиномонтаж</string>
    <string name="diagnostics">Диагностика</string>


    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
</resources>
