<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alekseysamoylov.serviceprices.activities.MainActivity">

    <Button
        android:text="@string/engine_repair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goWorkToList"
        android:id="@+id/engineButton"
        android:layout_marginTop="23dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/electrical_repair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goWorkToList"
        android:id="@+id/electricButton"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/suspensionButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/tire_repair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goWorkToList"
        android:id="@+id/tireButton"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/electricButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/suspension_repair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goWorkToList"
        android:id="@+id/suspensionButton"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/engineButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/diagnostics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goWorkToList"
        android:id="@+id/diagnosticsButton"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tireButton"
        android:layout_alignRight="@+id/tireButton"
        android:layout_alignEnd="@+id/tireButton"
        android:layout_marginTop="23dp" />

    <Button
        android:text="registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registration"
        android:onClick="goToSecurity"
        android:layout_alignTop="@+id/login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToSecurity"
        android:id="@+id/login"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/diagnosticsButton"
        android:layout_alignEnd="@+id/diagnosticsButton" />

    <Button
        android:text="LogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logOut"
        android:onClick="goToSecurity"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <Button
        android:text="Bonuses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToBonuses"
        android:id="@+id/bonuses"
        android:layout_below="@+id/diagnosticsButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp" />


</RelativeLayout>
